[gd_scene load_steps=16 format=2]

[ext_resource path="res://minigames/pipewater_game/pipe/tipo1/pipe.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://minigames/pipewater_game/assets/pipes/Union_down.png" type="Texture" id=3]
[ext_resource path="res://minigames/pipewater_game/assets/pipes/Union_up.png" type="Texture" id=4]
[ext_resource path="res://minigames/pipewater_game/assets/pipes/tubo_largo_vertical.png" type="Texture" id=5]
[ext_resource path="res://minigames/pipewater_game/assets/pipes/Curva_left_down.png" type="Texture" id=7]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

// Gonkee's water shader for Godot 3 - full tutorial https://youtu.be/uhMAHpV_cDg
// If you use this shader, I would prefer if you gave credit to me and my channel

uniform vec4 blue_tint : hint_color;

uniform vec2 sprite_scale;
uniform float scale_x = 0.67;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(12.9898, 78.233)))* 43758.5453123);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

void fragment(){
	
	vec2 noisecoord1 = UV * sprite_scale * scale_x;
	vec2 noisecoord2 = UV * sprite_scale * scale_x + 4.0;
	
	vec2 motion1 = vec2(TIME * 0.3, TIME * -0.4);
	vec2 motion2 = vec2(TIME * 0.1, TIME * 0.5);
	
	vec2 distort1 = vec2(noise(noisecoord1 + motion1), noise(noisecoord2 + motion1)) - vec2(0.5);
	vec2 distort2 = vec2(noise(noisecoord1 + motion2), noise(noisecoord2 + motion2)) - vec2(0.5);
	
	vec2 distort_sum = (distort1 + distort2) / 60.0;
	
	vec4 color = textureLod(SCREEN_TEXTURE, SCREEN_UV + distort_sum, 0.0);
	
	color = mix(color, blue_tint, 0.3);
	color.rgb = mix(vec3(0.5), color.rgb, 1.4);
	
	float near_top = (UV.y + distort_sum.y) / (0.2 / sprite_scale.y);
	near_top = clamp(near_top, 0.0, 1.0);
	near_top = 1.0 - near_top;
	
	color = mix(color, vec4(1.0), near_top);
	
	float edge_lower = 0.6;
	float edge_upper = edge_lower + 0.1;
	
	if(near_top > edge_lower){
		color.a = 0.0;
		
		if(near_top < edge_upper){
			color.a = (edge_upper - near_top) / (edge_upper - edge_lower);
		}
	}
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/blue_tint = Color( 0.211765, 0.482353, 1, 1 )
shader_param/sprite_scale = Vector2( 12, 12 )
shader_param/scale_x = 0.67

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 62.6302, 174.724 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 198.394, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 205.502, 8.34975 )

[sub_resource type="CircleShape2D" id=8]
radius = 184.934

[sub_resource type="Animation" id=9]
resource_name = "diagonalWater1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Tipo2/waterAni2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.135172, 6.89655e-06 ), Vector2( 0.12716, 0.124807 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Tipo2/waterAni3:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.80573e-05, 0.053342 ), Vector2( -0.254719, 0.0564338 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Tipo2/waterAni3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, 33.642 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Tipo2/waterAni2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 47.291, 150 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "diagonalWater2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Tipo2/waterAni2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 173.075, 40.0118 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Tipo2/waterAni2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.000841044, 0.0644818 ), Vector2( 0.252956, 0.0644818 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Tipo2/waterAni3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -20.1968, -7.19113 ), Vector2( -40.9306, -7.19113 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Tipo2/waterAni3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Tipo2/waterAni3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.000183876, 0.000105097 ), Vector2( -0.130552, -0.128428 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fillWaterVertical_1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Tipo1/waterAni:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.196, 1e-05 ), Vector2( 0.195555, 0.326148 ) ]
}

[node name="pipe" type="Node2D"]
scale = Vector2( 0.333, 0.333 )
script = ExtResource( 1 )

[node name="Sprite" type="Node2D" parent="."]

[node name="Tipo1" type="Node2D" parent="Sprite"]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="waterAni" type="Sprite" parent="Sprite/Tipo1"]
material = SubResource( 3 )
position = Vector2( 66.6066, 196.73 )
rotation = 3.14159
scale = Vector2( 0.196, 1e-05 )
texture = ExtResource( 2 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Sprite/Tipo1/waterAni"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.6, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Union_up" type="Sprite" parent="Sprite/Tipo1"]
position = Vector2( 0, -154 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="tubo_largo_vertical" type="Sprite" parent="Sprite/Tipo1"]
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Union_down" type="Sprite" parent="Sprite/Tipo1"]
position = Vector2( 0, 153 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DraggableArea" type="Area2D" parent="Sprite/Tipo1"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Tipo1/DraggableArea"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="WaterEntrance" type="Node2D" parent="Sprite/Tipo1"]

[node name="In" type="Area2D" parent="Sprite/Tipo1/WaterEntrance"]
position = Vector2( 3.00136, -229.387 )

[node name="one" type="CollisionShape2D" parent="Sprite/Tipo1/WaterEntrance/In"]
shape = SubResource( 5 )
disabled = true

[node name="Out" type="Area2D" parent="Sprite/Tipo1/WaterEntrance"]
position = Vector2( -1.43173, 224.688 )

[node name="two" type="CollisionShape2D" parent="Sprite/Tipo1/WaterEntrance/Out"]
shape = SubResource( 6 )
disabled = true

[node name="Tipo2" type="Node2D" parent="Sprite"]
visible = false
scale = Vector2( 1.45, 1.45 )
__meta__ = {
"_edit_lock_": true
}

[node name="waterAni2" type="Sprite" parent="Sprite/Tipo2"]
material = SubResource( 3 )
position = Vector2( 47.291, 150 )
rotation = -3.14159
scale = Vector2( 0.135172, 6.89655e-06 )
texture = ExtResource( 2 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Sprite/Tipo2/waterAni2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.6, 1, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="waterAni3" type="Sprite" parent="Sprite/Tipo2"]
material = SubResource( 3 )
position = Vector2( -10, 33.642 )
rotation = 3.14159
scale = Vector2( -2.80573e-05, 0.053342 )
texture = ExtResource( 2 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Sprite/Tipo2/waterAni3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.6, 1, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Curva_left_down" type="Sprite" parent="Sprite/Tipo2"]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="tubo_largo_vertical" type="Sprite" parent="Sprite/Tipo2"]
position = Vector2( -1.99394, 123 )
scale = Vector2( 0.808811, 0.365285 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="DraggableArea" type="Area2D" parent="Sprite/Tipo2"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Tipo2/DraggableArea"]
shape = SubResource( 8 )

[node name="WaterEntrance" type="Node2D" parent="Sprite/Tipo2"]
scale = Vector2( 0.689655, 0.689655 )
__meta__ = {
"_edit_lock_": true
}

[node name="In" type="Area2D" parent="Sprite/Tipo2/WaterEntrance"]
position = Vector2( 257.162, -0.642578 )

[node name="one" type="CollisionShape2D" parent="Sprite/Tipo2/WaterEntrance/In"]
rotation = 1.5708
shape = SubResource( 5 )
disabled = true

[node name="Out" type="Area2D" parent="Sprite/Tipo2/WaterEntrance"]
position = Vector2( -1.43173, 224.688 )

[node name="two" type="CollisionShape2D" parent="Sprite/Tipo2/WaterEntrance/Out"]
shape = SubResource( 6 )
disabled = true

[node name="letsDrag" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/diagonalWater1 = SubResource( 9 )
anims/diagonalWater2 = SubResource( 10 )
anims/fillWaterVertical_1 = SubResource( 1 )
[connection signal="input_event" from="Sprite/Tipo1/DraggableArea" to="." method="_on_DraggableArea_input_event"]
[connection signal="body_entered" from="Sprite/Tipo1/WaterEntrance/In" to="." method="_on_In_body_entered"]
[connection signal="body_exited" from="Sprite/Tipo1/WaterEntrance/In" to="." method="_on_In_body_exited"]
[connection signal="body_entered" from="Sprite/Tipo1/WaterEntrance/Out" to="." method="_on_Out_body_entered"]
[connection signal="body_exited" from="Sprite/Tipo1/WaterEntrance/Out" to="." method="_on_Out_body_exited"]
[connection signal="input_event" from="Sprite/Tipo2/DraggableArea" to="." method="_on_DraggableArea_input_event"]
[connection signal="body_entered" from="Sprite/Tipo2/WaterEntrance/In" to="." method="_on_In_body_entered"]
[connection signal="body_exited" from="Sprite/Tipo2/WaterEntrance/In" to="." method="_on_In_body_exited"]
[connection signal="body_entered" from="Sprite/Tipo2/WaterEntrance/Out" to="." method="_on_Out_body_entered"]
[connection signal="body_exited" from="Sprite/Tipo2/WaterEntrance/Out" to="." method="_on_Out_body_exited"]
[connection signal="timeout" from="letsDrag" to="." method="_on_letsDrag_timeout"]
